--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,35 @@
 frontend/node_modules/
 frontend/build/
 frontend/.env
+frontend/.pnp
+frontend/.pnp.js
+
+frontend/# testing
+frontend/coverage
+
+frontend/# production
+frontend/build
+
+frontend/# misc
+frontend/.DS_Store
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
+
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+
 
 # Python (backend)
 backend/venv/
-backend\app\__pycache__
-backend\app\api\__pycache__
+backend/app/__pycache__
+backend/app/api/__pycache__
 backend/__pycache__/
 backend/*.pyc
 backend/.env
 
 # VS Code settings
 .vscode/
+
