--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,13 @@ backend/__pycache__/
 backend/*.pyc
 backend/.env
 
+# Ignore all files in this directory
+/backend/uploaded_files/* 
+
+# Except this folder itself
+!/backend/uploaded_files/
+
+
 # VS Code settings
 .vscode/
 
